--- a/roles/supervisor/templates/supervisord.conf
+++ b/roles/supervisor/templates/supervisord.conf
@@ -21,7 +21,7 @@ stopasgroup=true
 stdout_logfile = /home/{{ username }}/logs/user/nginx/out.log
 stderr_logfile = /home/{{ username }}/logs/user/nginx/err.log
 
-[program:uswgi]
+[program:uwsgi]
 command=uwsgi --ini /home/{{ username }}/local/etc/uwsgi.ini
 autorestart=true
 stopsignal=QUIT
