Small fixes: Added touch .bash_profile / added comment to README

--- a/roles/virtualenv/tasks/main.yml
+++ b/roles/virtualenv/tasks/main.yml
@@ -5,6 +5,9 @@
 - name: install setuptools
   shell: wget https://bootstrap.pypa.io/ez_setup.py -O - | python - --user
 
+- name: touch .bash_profile
+  shell: touch $HOME/.bash_profile
+
 - name: add local bin to PATH
   lineinfile: dest=~/.bash_profile line='export PATH=$HOME/.local/bin:$PATH'
 
